Bug 689897 - Last two pages missing
Summary: Last two pages missing
Status: NOTIFIED FIXED
Alias: None
Product: GhostPCL
Classification: Unclassified
Component: PCL interpreter (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Henry Stiles
URL:
Keywords:
: 689898 689899 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-06-14 15:23 UTC by Marcos H. Woehrmann
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer: 460
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2008-06-14 15:23:29 UTC
The attached file when processed by GhostPCL head (r3089+8795) is missing it's
the two pages, as compared to output from an HP LaserJet 6MP.

The command line I'm using:

  pcl6 -r600 -sDEVICE=pbmraw -sOutputFile=test%02d.pbm -dBATCH -dNOPAUSE  C321.BIN
Comment 1 Marcos H. Woehrmann 2008-06-14 15:23:52 UTC
Created attachment 4098 [details]
C321.BIN
Comment 2 Henry Stiles 2008-06-15 12:13:44 UTC
I get 24 pages on the HP 4600 and Artifex PCL running the attached C321.BIN. 
The last two pages are titled "Special Test D:Intersect Path Larger/Smaller Than
Existing Path".  Marcos, can you check this again?
Comment 3 Marcos H. Woehrmann 2008-06-15 13:58:49 UTC
marcos@amd64:[354]% /home/marcos/artifex/ghostpcl/trunk/ghostpcl/main/obj/pcl6
-sDEVICE=pbmraw -sOutputFile=test.raw  ./C321.BIN
End of page 1, press <enter> to continue.

End of page 2, press <enter> to continue.

End of page 3, press <enter> to continue.

End of page 4, press <enter> to continue.

End of page 5, press <enter> to continue.

End of page 6, press <enter> to continue.

End of page 7, press <enter> to continue.

End of page 8, press <enter> to continue.

End of page 9, press <enter> to continue.

End of page 10, press <enter> to continue.

End of page 11, press <enter> to continue.

End of page 12, press <enter> to continue.

End of page 13, press <enter> to continue.

End of page 14, press <enter> to continue.

End of page 15, press <enter> to continue.

End of page 16, press <enter> to continue.

End of page 17, press <enter> to continue.

End of page 18, press <enter> to continue.

End of page 19, press <enter> to continue.

End of page 20, press <enter> to continue.

End of page 21, press <enter> to continue.

End of page 22, press <enter> to continue.

marcos@amd64:[355]% 
Comment 4 Henry Stiles 2008-06-15 14:21:56 UTC
Sorry you're right, on the mac I get 22 pages with a production build (make pcl)
and 24 pages with a debug build (make pcl-debug).  I guess it is time for me to
do a complete test comparing production vs. debug since I now have a few of
these problems.
Comment 5 Henry Stiles 2008-06-23 20:42:34 UTC
*** Bug 689898 has been marked as a duplicate of this bug. ***
Comment 6 Henry Stiles 2008-06-23 20:43:16 UTC
*** Bug 689899 has been marked as a duplicate of this bug. ***
Comment 7 Henry Stiles 2008-06-25 12:23:34 UTC
fixed in ghostpdl 3094