gs/base/gdevpdfx.h
@@ -698,7 +698,10 @@ struct gx_device_pdf_s {
     gs_id     image_mask_id;
     bool      image_mask_is_SMask;
     bool      image_mask_skip; /* A flag for pdf_begin_transparency_mask */
-    bool      image_with_SMask; /* A flag for pdf_begin_transparency_group. */
+    uint      image_with_SMask; /* A flag for pdf_begin_transparency_group. In order to
+                                 * deal with nested groups we set/test the bit according
+                                 * to the FormDepth
+                                 */
     gs_matrix converting_image_matrix;
     double    image_mask_scale;
     /* Temporary data for soft mask form. */
